--- a/AproriAlgo.ipynb
+++ b/AproriAlgo.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,26 +183,26 @@
     "            confidence_val=df_new[l][2]/table0[  str(  [df_new[l][0][j]]  )  ]\n",
     "            conf.append(confidence_val)\n",
     "        for item,conf in zip(df_new[l][0],conf):\n",
-    "            total_conf.append((item,conf))\n",
+    "            total_conf.append([df_new[l][0],(item,conf)])\n",
     "    return total_conf\n",
     "           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('chease', 1.0),\n",
-       " ('juice', 0.7499999999999999),\n",
-       " ('bread', 0.7499999999999999),\n",
-       " ('juice', 0.7499999999999999)]"
+       "[[['chease', 'juice'], ('chease', 1.0)],\n",
+       " [['chease', 'juice'], ('juice', 0.7499999999999999)],\n",
+       " [['bread', 'juice'], ('bread', 0.7499999999999999)],\n",
+       " [['bread', 'juice'], ('juice', 0.7499999999999999)]]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
