--- a/AproriAlgo.ipynb
+++ b/AproriAlgo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total transactions:  5     items:  [['juice'], ['chease'], ['milk'], ['bread'], ['yogurt'], ['egg']]\n"
+      "Total transactions:  5     items:  [['egg'], ['bread'], ['yogurt'], ['juice'], ['milk'], ['chease']]\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -89,17 +89,13 @@
    "source": [
     "# update item list to combine same featured item in a single item list \n",
     "def update_item(items):\n",
-    "    update_item_val=[]\n",
-    "    for i in range(len(items)+1):\n",
-    "        for j in range(i+1,len(items)):\n",
-    "            item=items[i]+items[j]\n",
-    "            update_item_val.append(list(set(item)))       \n",
+    "    update_item_val=[list(set(items[i]+items[j])) for i in range(len(items)+1) for j in range(i+1,len(items))]       \n",
     "    return update_item_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -125,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -133,13 +129,13 @@
      "output_type": "stream",
      "text": [
       "      items frequency  support\n",
-      "0   [juice]         4      0.8\n",
-      "1  [chease]         3      0.6\n",
-      "2    [milk]         3      0.6\n",
-      "3   [bread]         4      0.8\n",
-      "             items frequency  support\n",
-      "0  [chease, juice]         3      0.6\n",
-      "2   [bread, juice]         3      0.6\n"
+      "1   [bread]         4      0.8\n",
+      "3   [juice]         4      0.8\n",
+      "4    [milk]         3      0.6\n",
+      "5  [chease]         3      0.6\n",
+      "              items frequency  support\n",
+      "6    [bread, juice]         3      0.6\n",
+      "13  [juice, chease]         3      0.6\n"
      ]
     }
    ],
@@ -149,20 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{\"['juice']\": 0.8, \"['chease']\": 0.6, \"['milk']\": 0.6, \"['bread']\": 0.8}"
-      ]
-     },
-     "execution_count": 252,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# making item and support pair of first table to get individuals support \n",
     "table0={str(item_str):support_val for item_str,support_val in zip(tables[0]['items'],tables[0]['support'])}"
@@ -170,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,37 +163,41 @@
     "def confidence(table0,df_new):\n",
     "    total_conf=[]\n",
     "    for l in range(0,len(df_new)):\n",
-    "        conf=[]\n",
-    "        for j in range(len(df_new[l][0])):\n",
-    "            confidence_val=df_new[l][2]/table0[  str(  [df_new[l][0][j]]  )  ]\n",
-    "            conf.append(confidence_val)\n",
+    "        conf=[df_new[l][2]/table0[str([df_new[l][0][j]])] for j in range(len(df_new[l][0]))]\n",
     "        for item,conf in zip(df_new[l][0],conf):\n",
     "            total_conf.append([df_new[l][0],(item,conf)])\n",
-    "    return total_conf\n",
-    "           "
+    "    return total_conf           "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence Table :\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[[['chease', 'juice'], ('chease', 1.0)],\n",
-       " [['chease', 'juice'], ('juice', 0.7499999999999999)],\n",
-       " [['bread', 'juice'], ('bread', 0.7499999999999999)],\n",
-       " [['bread', 'juice'], ('juice', 0.7499999999999999)]]"
+       "[[['bread', 'juice'], ('bread', 0.7499999999999999)],\n",
+       " [['bread', 'juice'], ('juice', 0.7499999999999999)],\n",
+       " [['juice', 'chease'], ('juice', 0.7499999999999999)],\n",
+       " [['juice', 'chease'], ('chease', 1.0)]]"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "conf=confidence(table0,tables[-1].values)\n",
+    "print(\"Confidence Table :\")\n",
     "conf"
    ]
   }
